# crawl4ai

./: .codeiumignore  .continuerules  .dockerignore  .env.dev  .env.example  .env.local  .env.txt  .flake8  .gitattributes  .gitignore  .gitignore.dev  .pre-commit-config.yaml  .ruff.toml  BATDONGSAN_CRAWLER_README.md  CHANGELOG.md  CHANGES_CDP_CONCURRENCY.md  CODE_OF_CONDUCT.md  COMPANY_SCRAPER_README.md  CONTRIBUTING.md  CONTRIBUTION_SUMMARY.md  CONTRIBUTORS.md  Dockerfile  Dockerfile-version-0  DockerfileTest  DockerfileTest2  DockerfileTest3  Dockerfile_mac  Dockerfile_old  JOURNAL.md  LICENSE  MANIFEST.in  MISSION.md  Makefile.telemetry  OPTION_B_IMPROVEMENTS.md  PHASE_1_IMPROVEMENTS.md  PHASE_2_BATCH_PROCESSING.md  PROGRESSIVE_CRAWLING.md  PULL_REQUEST_TEMPLATE.md  RAM.txt  README-first.md  (+67 more)
.actor/: .dockerignore  Dockerfile  README.md  actor.json  pyproject.toml
.actor/src/: __main__.py  input.py  main.py
.claude/: mcp-config.json  settings.local.json
.context/: PR-TODOLIST.md
.devcontainer/: Dockerfile.dev  README.md  devcontainer.json  docker-compose.yml  setup.sh  start-services.sh
.do/: app.yaml  deploy.template.yaml
.githooks/: pre-commit
.github/: FUNDING.yml  pull_request_template.md
.local/: issues_todo.md  remember_prompt.md
ai-agent/: agent.md
ai-jeoparty-app/: package-lock.json  package.json
backend/: auth.py  database.py  main.py  requirements.txt  schemas.py
crawl4ai/: __init__.py  __version__.py  _version.py  adaptive_crawler copy.py  adaptive_crawler.py  antibot_detector.py  async_configs.py  async_crawler_strategy copy.py  async_crawler_strategy.back.py  async_crawler_strategy.current.py  async_crawler_strategy.py  async_crawler_strategy_0.3.73.py  async_crawler_strategy_ud.py  async_database.3.73.py  async_database.py  async_deep_crawl.py  async_dispatcher.py  async_dispatcher_.py  async_executor.py  async_logger.py  async_plasmate_strategy.py  async_tools.py  async_url_seeder.py  async_webcrawler.py  browser_adapter.py  browser_manager.py  browser_profiler.py  cache_client.py  cache_context.py  cache_validator.py  chunking_strategy.py  cli.py  config.py  config_health_monitor.py  content_cleaning_strategy.py  content_filter_strategy.py  content_scraping_strategy.py  content_scrapping_strategy.py  crawler_strategy.py  data_persistence_strategy.py  (+37 more)
crawl4ai-web/: .gitignore  components.json  package-lock.json  package.json
crawler/: __init__.py  database.py  prompts.py  utils.py  web_crawler.py
deploy/: Dockerfile
docs/: CHANGES_NOTES_FOR_V.0.7.9_RELEASE.md  ENHANCED_FEATURES.md  GIT_WORKFLOW.md  MICROSERVICES_ARCHITECTURE.md  PRD_PLATFORM_DEPLOYMENT.md  PROXY_ROTATION_STRATEGY_DOCS.md  RELEASE_NOTES_v0.8.0.md  callback_filter_example.md  chunking_strategies.json  coderabbit_review_response.md  extraction_strategies.json  health_check_feature.md  quickstart.py
documentation/: adaptive-crawling.md  adaptive-strategies.md  advanced-features.md  arun.md  arun_many.md  async-webcrawler.md  browser-crawler-config.md  c4a-script-reference.md  c4a-script.md  cache-modes.md  chunking.md  cli.md  clustring-strategies.md  content-selection.md  crawl-dispatcher.md  crawl-result.md  crawler-result.md  deep-crawling.md  docker-deployment.md  examples.md  file-downloading.md  fit-markdown.md  hooks-auth.md  identity-based-crawling.md  index.md  installation.md  lazy-loading.md  link-media.md  llm-strategies.md  local-files.md  markdown-generation.md  multi-url-crawling.md  network-console-capture.md  no-llm-strategies.md  page-interaction.md  parameters.md  pdf-parsing.md  proxy-security.md  quickstart.md  session-management.md  (+6 more)
documentation_crawl4ai/: adaptive-crawler.md  adaptive-crawling.md  adaptive-strategies.md  advanced-features.md  arun.md  arun_many.md  ask-ai.md  async-webcrawler.md  browser-crawler-config.md  c4a-script-reference.md  c4a-script.md  cache-modes.md  chunking.md  cli.md  clustring-strategies.md  content-selection.md  crawl-dispatcher.md  crawl-result.md  crawler-result.md  deep-crawling.md  digest.md  docker-deployment.md  examples.md  file-downloading.md  fit-markdown.md  hooks-auth.md  identity-based-crawling.md  index.md  installation.md  lazy-loading.md  link-media.md  llm-strategies.md  local-files.md  markdown-generation.md  multi-url-crawling.md  network-console-capture.md  no-llm-strategies.md  page-interaction.md  parameters.md  pdf-parsing.md  (+9 more)
examples/: claude_code_error_handling.py  claude_code_extraction.py  quickstart.py  save_certificate.py  ssl_certificate_example.py
langchain/: __init__.py  loader.py
myCrawler/: Legat4me.ipynb  details_list copy.json  greetingDK.md  greetingGB.md  results.json  scholarship_urls.parquet  scholarships_data.json  vectorization_data.json
pages/: app.css  app.js  index copy.html  index.html  index_pooling.html  tmp.html
plans/: browser-farm-context.md  docstring.md
prompts/: prompt_net_requests.md
sbom/: README.md  sbom.cdx.json
scripts/: README.md  gen-sbom.sh  run.sh  update_stats.py
services/browser-service/: pyproject.toml
services/browser-service/src/browser_service/: __init__.py  api.py  browser_manager.py  main.py
services/content-scraping-service/: pyproject.toml
services/content-scraping-service/src/content_scraping_service/: __init__.py  api.py  main.py  scraper.py
shared/client/: pyproject.toml
shared/client/src/crawl4ai_client/: __init__.py  base.py  browser.py  extraction.py  filtering.py  scraping.py
shared/core/: pyproject.toml
shared/core/src/crawl4ai_core/: __init__.py  config.py  models.py  utils.py
shared/schemas/: pyproject.toml
shared/schemas/src/crawl4ai_schemas/: __init__.py  browser.py  extraction.py  filtering.py  scraping.py
test_agent_output/: TEST_REPORT.md  test_results.json  test_suite_report.json
test_scripts/: test_proxy_deprecation.py
tests/: WEBHOOK_TEST_README.md  check_dependencies.py  conftest.py  docker_example.py  example_url_discovery.py  helpers.py  test_arun_many.py  test_arun_many_cdp.py  test_async_dispatcher.py  test_async_logger_stderr.py  test_async_url_seeder.py  test_base_tag_local.py  (+108 more)
(+1443 files in other folders)
