[build-system]
requires = ["setuptools>=81.0.0", "wheel>=0.45.1"]
build-backend = "setuptools.build_meta"

[project]
name = "Crawl4AI"
dynamic = ["version"]
description = "🚀🤖 Crawl4AI: Open-source LLM Friendly Web Crawler & scraper"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    {name = "Unclecode", email = "unclecode@kidocode.com"}
]
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.14.1",
    "aiosqlite>=0.22.1",
    "anyio>=4.14.1",
    "lxml>=6.1.1",
    "unclecode-litellm==1.81.13",
    "numpy>=2.2.6,<3",
    "pillow>=12.3.0",
    "playwright>=1.61.0",
    "patchright>=1.61.1",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "beautifulsoup4>=4.15.0",
    "playwright-stealth>=2.0.3",
    "xxhash>=3.8.0",
    "rank-bm25>=0.2.2",
    "snowballstemmer>=3.1.1",
    "pydantic>=2.13.4",
    "pyOpenSSL>=26.3.0",
    "psutil>=7.2.2",
    "PyYAML>=6.0.3",
    "nltk>=3.9.4",
    "rich>=15.0.0",
    "cssselect>=1.4.0",
    "httpx[http2]>=0.28.1",
    "fake-useragent>=2.2.0",
    "click>=8.4.2",
    "chardet>=7.4.3",
    "brotli>=1.2.0",
    "humanize>=4.16.0",
    "lark>=1.3.1",
    "alphashape>=1.3.1",
    "shapely>=2.1.2",
    "pdf2image>=1.17.0"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
pdf = ["pypdf>=6.14.2"]
torch = ["torch>=2.12.1", "nltk>=3.9.4", "scikit-learn>=1.7.2"]
transformer = ["transformers>=5.12.1", "tokenizers>=0.22.2", "sentence-transformers>=5.6.0"]
cosine = ["torch>=2.12.1", "transformers>=5.12.1", "nltk>=3.9.4", "sentence-transformers>=5.6.0"]
sync = ["selenium>=4.45.0"]
all = [
    "pypdf>=6.14.2",
    "torch>=2.12.1",
    "nltk>=3.9.4",
    "scikit-learn>=1.7.2",
    "transformers>=5.12.1",
    "tokenizers>=0.22.2",
    "sentence-transformers>=5.6.0",
    "selenium>=4.45.0"
]

[project.scripts]
crawl4ai-download-models = "crawl4ai.model_loader:main"
crawl4ai-migrate = "crawl4ai.migrations:main"
crawl4ai-setup = "crawl4ai.install:post_install"
crawl4ai-doctor = "crawl4ai.install:doctor"
crwl = "crawl4ai.cli:main"

[tool.setuptools]
packages = {find = {where = ["."], include = ["crawl4ai*"]}}

[tool.setuptools.package-data]
crawl4ai = ["js_snippet/*.js", "crawlers/google_search/*.js"]

[tool.setuptools.dynamic]
version = {attr = "crawl4ai.__version__.__version__"}

[tool.uv.sources]
crawl4ai = { workspace = true }

[dependency-groups]
dev = [
    "crawl4ai",
]
