[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Crawl4AI"
dynamic = ["version"]
description = "🚀🤖 Crawl4AI: Open-source LLM Friendly Web Crawler & scraper"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    {name = "Unclecode", email = "unclecode@kidocode.com"}
]
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.14.1",
    "aiosqlite~=0.22",
    "anyio>=4.14.1",
    "lxml~=5.3",
    "unclecode-litellm==1.81.13",
    "numpy>=1.26.0,<3",
    "pillow>=10.4",
    "playwright>=1.61.0",
    "patchright>=1.61.1",
    "python-dotenv~=1.2",
    "requests~=2.34",
    "beautifulsoup4~=4.15",
    "playwright-stealth>=2.0.3",
    "xxhash~=3.8",
    "rank-bm25~=0.2",
    "snowballstemmer~=2.2",
    "pydantic>=2.13.4",
    "pyOpenSSL>=25.3.0",
    "psutil>=6.1.1",
    "PyYAML>=6.0.3",
    "nltk>=3.9.4",
    "rich>=13.9.4",
    "cssselect>=1.4.0",
    "httpx[http2]>=0.28.1",
    "fake-useragent>=2.2.0",
    "click>=8.4.2",
    "chardet>=5.2.0",
    "brotli>=1.2.0",
    "humanize>=4.16.0",
    "lark>=1.3.1",
    "alphashape>=1.3.1",
    "shapely>=2.1.2"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
pdf = ["pypdf", "pdf2image>=1.17.0"]  
torch = ["torch", "nltk", "scikit-learn"]
transformer = ["transformers", "tokenizers", "sentence-transformers"]
cosine = ["torch", "transformers", "nltk", "sentence-transformers"]
sync = ["selenium"]
all = [
    "pypdf",
    "torch",
    "nltk",
    "scikit-learn",
    "transformers",
    "tokenizers",
    "sentence-transformers",
    "selenium"
]

[project.scripts]
crawl4ai-download-models = "crawl4ai.model_loader:main"
crawl4ai-migrate = "crawl4ai.migrations:main"
crawl4ai-setup = "crawl4ai.install:post_install"
crawl4ai-doctor = "crawl4ai.install:doctor"
crwl = "crawl4ai.cli:main"

[tool.setuptools]
packages = {find = {where = ["."], include = ["crawl4ai*"]}}

[tool.setuptools.package-data]
crawl4ai = ["js_snippet/*.js", "crawlers/google_search/*.js"]

[tool.setuptools.dynamic]
version = {attr = "crawl4ai.__version__.__version__"}

[tool.uv.sources]
crawl4ai = { workspace = true }

[dependency-groups]
dev = [
    "crawl4ai",
]
